--- a/css/c03_external_styling.html
+++ b/css/c03_external_styling.html
@@ -4,15 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inline Styling</title>
-    <style>
-      h1 {
-          color: blue;
-          text-align: center"
-      }
-      p {
-          color: red;
-      }
-    </style>
+    <link rel="stylesheet" href="./c04_styles.css" />
   </head>
   <body>
     <h1>Hello World</h1>
