create html css responsive design bootstrap and sass learning files

--- a/w01_html/h03_images.html
+++ b/w01_html/h03_images.html
@@ -1,12 +1,13 @@
+<!-- adding images to a webpage -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sizing</title>
-    <link rel="stylesheet" href="./c04_styles.css" />
+    <title>Images</title>
   </head>
   <body>
-    <div class="">Hello world</div>
+    <img src="cat.jpg" alt="Cute Cat" title="cool cat" width="300px"  />
   </body>
 </html>
