--- a/w01_html/h06_tables.html
+++ b/w01_html/h06_tables.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tables</title>
+    <link rel="stylesheet" href="../w02_css/c04_styles.css" />
   </head>
   <body>
     <table>
       <thead>
-        <tr>
+        <tr class="head">
           <th>Student</th>
           <th>Age</th>
           <th>Gpa</th>
