--- a/w02_css/c07_sizing_elements.html
+++ b/w02_css/c07_sizing_elements.html
@@ -1,13 +1,12 @@
-<!-- adding images to a webpage -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Images</title>
+    <title>Sizing</title>
+    <link rel="stylesheet" href="./c04_styles.css" />
   </head>
   <body>
-    <img src="cat.jpg" alt="Cute Cat" title="cool cat" width="300px" />
+    <div class="box">Hello world</div>
   </body>
 </html>
